# facelapse

./: .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/: README.md
facelapse/: __init__.py  align.py  bucketing.py  cache.py  cli.py  config.py  dedup.py  detection.py  identity.py  ingest.py  landmarks.py  neutral.py  photometric.py  pipeline.py  pose.py  quality.py  records.py  render.py  review.py  smoothing.py  timeline.py  timestamps.py
tests/: e2e_smoke.py  test_core.py
